# nano-claude

./: .gitignore  CLAUDE.md  LICENSE  NANO.md  PARITY.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/sessions/: session-1775007622154.json  session-1775007632904.json  session-1775009126105.json  session-1775009583240.json  session-1775009651284.json  session-1775010002596.json  session-1775010229294.json  session-1775010237519.json
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  COMMANDS.md  COMMIT.md
docs/posts/: README.md  TEMPLATE.md  TODO.md  buddy-design.md  cli-design.md  delete-empty-dirs.md  introduction.md  memory-design.md
docs/posts/00-introduction/: README.md
docs/posts/00.5-setup-pypi/: README.md
docs/posts/10-delete-subsystems/: README.md
docs/posts/10-rust-tui/: README.md
docs/reference/: README.md
reference/: README.md
rust/: .clawd-todos.json  README.md
rust/crates/api/src/: client.rs  lib.rs
rust/crates/runtime/src/: config.rs  conversation.rs  lib.rs  (+1 more)
rust/crates/rusty-claude-cli/: Cargo.toml
src/: QueryEngine.py  Tool.py  __init__.py  agent.py  bootstrap_graph.py  context.py  cost_tracker.py  deferred_init.py  dialogLaunchers.py  direct_modes.py  history.py  ink.py  interactiveHelpers.py  main.py  models.py  parity_audit.py  permissions.py  port_manifest.py  prefetch.py  remote_runtime.py  repl.py  replLauncher.py  session_store.py  settings.py  setup.py  system_init.py  task.py  tasks.py
src/agent/: agent.py  settings.py
src/buddy/: __init__.py  eyes.py  generator.py  hats.py  models.py  prng.py  rarities.py  species.py
src/cli/: main.py  repl.py
src/engine/: query_engine.py  runtime.py
src/memory/: __init__.py  index.py  models.py  storage.py
src/registry/: command_graph.py  commands.py  execution_registry.py  tool_pool.py  tools.py
tests/: test_buddy.py  test_memory.py  test_repl_e2e.py  test_workspace.py
(+6 files in other folders)
