[project]
name = "nano-cc"
version = "0.1.0"
description = "Minimal Python CLI framework - understanding through subtraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nano-cc = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]