[project]
name = "nano-claude"
version = "0.1.0"
description = "Minimal Python CLI framework - understanding through subtraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
authors = [{ name = "Yang Jing", email = "yangjing@example.com" }]
keywords = ["cli", "claude", "agent", "ai"]

[project.scripts]
nano-claude = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]