[project]
name = "nano-claude"
version = "0.1.0"
description = "Minimal Python CLI framework - understanding through subtraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.87.0",
    "claude-agent-sdk>=0.1.53",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pytest>=9.0.2",
    "prompt-toolkit>=3.0.52",
]
license = "MIT"
authors = [{ name = "Yang Jing", email = "yangjing@example.com" }]
keywords = ["cli", "claude", "agent", "ai"]

[project.scripts]
nano-claude = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pexpect>=4.9.0",
    "pywinpty>=3.0.3",
]
